feat: ajuste