@@ -139,7 +139,7 @@ public class FormBatchDialog extends javax.swing.JDialog {
     }// </editor-fold>//GEN-END:initComponents
 
     private void jButton1ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton1ActionPerformed
-        // TODO add your handling code here:
+        dispose();
     }//GEN-LAST:event_jButton1ActionPerformed
 
     private void BtnSalveDialogBatchActionPerformed(java.awt.event.ActionEvent evt) {                                                    
@@ -157,7 +157,7 @@ public class FormBatchDialog extends javax.swing.JDialog {
 
             ProductService productService = helpService.getProductService();
             List<Product> product = productService.searchByBarcode(Integer.parseInt(TxtProductBatch.getText()));
-            newBatch.setProduct(product.getFirst());
+            newBatch.setProduct(product.get(0));
             
             newBatch.setAmount(Integer.parseInt(TxtQuantityBatch.getText()));
 
